Fix: fix color on dark mode

--- a/Survey form/styles.css
+++ b/Survey form/styles.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   font-family: sans-serif;
+  color: #ffffff;
 }
 body {
   width: 100%;
